--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "graphql": "^16.2.0",
+    "graphql-request": "^3.7.0",
     "sass": "^1.45.2",
     "vue": "^3.2.25"
   },
