--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "graphql": "^16.2.0",
     "graphql-request": "^3.7.0",
+    "lodash.nth": "^4.11.2",
     "vue": "^3.2.25",
     "vue-inline-svg": "^3.1.0"
   },
   "devDependencies": {
+    "@types/lodash.nth": "^4.11.3",
     "@types/node": "^17.0.8",
     "@vitejs/plugin-vue": "^2.0.0",
     "sass": "^1.47.0",
