--- a/package.json
+++ b/package.json
@@ -6,22 +6,32 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . -c ./eslintrc.js --ext .ts --ext .vue --fix"
   },
   "dependencies": {
     "graphql": "^16.2.0",
     "graphql-request": "^3.7.0",
     "lodash.nth": "^4.11.2",
-    "vue": "^3.2.25",
+    "vue": "^3.2.40",
     "vue-inline-svg": "^3.1.0"
   },
   "devDependencies": {
     "@types/lodash.nth": "^4.11.3",
-    "@types/node": "^17.0.8",
-    "@vitejs/plugin-vue": "^2.0.0",
+    "@types/node": "^18.8.4",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "@vitejs/plugin-vue": "^3.1.2",
+    "eslint": "^8.0.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-vue": "^9.6.0",
+    "prettier": "^2.7.1",
     "sass": "^1.47.0",
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2",
-    "vue-tsc": "^0.29.8"
+    "typescript": "*",
+    "vite": "^3.1.7",
+    "vue-tsc": "^1.0.6"
   }
 }
