--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "useTabs": false,
   "semi": false,
   "singleQuote": true,
-  "bracketSameLine": true,
+  "bracketSameLine": false,
   "arrowParens": "avoid",
   "vueIndentScriptAndStyle": true,
   "singleAttributePerLine": true,
