--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --host",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "lint": "eslint . -c ./eslintrc.js --ext .ts --ext .vue --fix"
+    "lint": "eslint src/**/* --ext .ts,.vue --fix"
   },
   "dependencies": {
     "graphql": "^16.2.0",
@@ -19,19 +19,23 @@
   "devDependencies": {
     "@types/lodash.nth": "^4.11.3",
     "@types/node": "^18.8.4",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "@vitejs/plugin-vue": "^3.1.2",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "eslint": "^8.0.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.6.0",
     "prettier": "^2.7.1",
     "sass": "^1.47.0",
     "typescript": "*",
     "vite": "^3.1.7",
+    "vue-eslint-parser": "^9.1.0",
     "vue-tsc": "^1.0.6"
   }
 }
