--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-import-resolver-typescript": "^3.5.1",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.6.0",
     "prettier": "^2.7.1",
     "sass": "^1.47.0",
     "typescript": "*",
     "vite": "^3.1.7",
+    "vite-tsconfig-paths": "^3.5.1",
     "vue-eslint-parser": "^9.1.0",
     "vue-tsc": "^1.0.6"
   }
