--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "lint": "eslint src/**/* --ext .ts,.vue --fix"
   },
   "dependencies": {
-    "graphql": "^16.2.0",
+    "graphql": "^16.6.0",
     "graphql-request": "^3.7.0",
     "lodash.nth": "^4.11.2",
-    "vue": "^3.2.40",
+    "vue": "^3.2.41",
     "vue-inline-svg": "^3.1.0"
   },
   "devDependencies": {
-    "@types/lodash.nth": "^4.11.3",
-    "@types/node": "^18.8.4",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
+    "@types/lodash.nth": "^4.11.4",
+    "@types/node": "^18.11.2",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "@vitejs/plugin-vue": "^3.1.2",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
-    "eslint": "^8.0.1",
+    "eslint": "^8.25.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
@@ -33,11 +33,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.6.0",
     "prettier": "^2.7.1",
-    "sass": "^1.47.0",
-    "typescript": "*",
-    "vite": "^3.1.7",
+    "sass": "^1.55.0",
+    "typescript": "4.8.4",
+    "vite": "^3.1.8",
     "vite-tsconfig-paths": "^3.5.1",
     "vue-eslint-parser": "^9.1.0",
-    "vue-tsc": "^1.0.6"
+    "vue-tsc": "^1.0.8"
   }
 }
