--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "dev": "vite --host",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "lint": "eslint src/**/* --ext .ts,.vue --fix",
-    "lint:style": "stylelint **/*.{scss,vue} --fix"
+    "lint": "eslint src/**/* --ext .ts,.vue",
+    "lint:style": "stylelint **/*.{scss,vue}",
+    "prepare": "husky install",
+    "lint:staged": "pnpm lint-staged --concurrent=false"
   },
   "dependencies": {
     "graphql": "^16.6.0",
@@ -33,11 +35,14 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.6.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.0.3",
     "postcss": "^8.4.18",
     "postcss-html": "^1.5.0",
     "prettier": "^2.7.1",
     "sass": "^1.55.0",
     "stylelint": "^14.14.0",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-scss": "^7.0.0",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard-scss": "^5.0.0",
