--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint src/**/* --ext .ts,.vue",
     "lint:style": "stylelint **/*.{scss,vue}",
     "prepare": "husky install",
-    "lint:staged": "pnpm lint-staged --concurrent=false"
+    "lint:staged": "pnpm lint-staged"
   },
   "dependencies": {
     "graphql": "^16.6.0",
